--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-ticker": "^1.2.2"
+    "react-ticker": "^1.2.2",
+    "webpack": "^2.2.0"
+  },
+  "resolutions": {
+    "webpack": "^2.2.0"
   }
 }
